# pluribit2

./: .gitignore  Cargo.toml  README.md  block-explorer.js  bootstrap-config.json  bootstrap.js  bootstrap.testnet.json  build.rs  cleanup.sh  clear_reorg_marker.js  concatenated_output.txt  config.js  consensus_model.html  db.js  generate-key.js  index.html  inspect-db.js  js_bridge.cjs  libp2p-node.js  logo.js  main.js  mining-worker.js  p2p.js  package.json  special.js  state.js  test-p2p.js  test.js  utils.js  vdf-worker.js  webpack.config.cjs  webwallet.html  worker.js  wt-p2p-bundle.js
.github/workflows/: release.yml
coverage/tmp/: coverage-2325612-1759848601371-0.json  coverage-2325613-1759848601371-0.json  coverage-2670486-1755002825868-0.json  coverage-2670487-1755002825867-0.json
native/: Cargo.toml  index.node  package.json
native/src/: db.rs  lib.rs  mining_loop.rs
p2p/: dht.js  dht.test.js  epidemic-gossip.js  hyparview.js  message-bus.js  mixing-node.js  network-manager.js  network-manager.test.js  noise-generator.js  privacy-publisher.js  relay-coordinator.js  reputation-aware-relay.js  scribe.js  traffic-mixer.js
pkg/: package.json  plurabit_core.d.ts  plurabit_core.js  plurabit_core_bg.wasm  plurabit_core_bg.wasm.d.ts
pluribit-data/: peer-id.json
pluribit-data/chain/: 000005.ldb  000010.ldb  LOG  LOG.old  MANIFEST-000009
pluribit-data/deferred/: LOG  LOG.old
pluribit-data/meta/: 000005.ldb  000008.ldb  LOG  LOG.old  MANIFEST-000007
pluribit-data/utxo/: 000005.ldb  000008.ldb  LOG  LOG.old  MANIFEST-000007
pluribit-data/wallets/: 000005.ldb  000008.ldb  LOG  LOG.old  MANIFEST-000007
services/: instances.js
src/: address.rs  block.rs  blockchain.rs  consensus_manager.rs  constants.rs  error.rs  lib.rs  merkle.rs  mimblewimble.rs  p2p.proto  p2p.rs  p2p_pb.cjs  p2p_pb.js  slashing.rs  staking.rs  stealth.rs  transaction.rs  utils.rs  vdf.rs  vdf_clock.rs  vrf.rs  wallet.rs  wasm_types.rs
